--- a/gulp/package.json
+++ b/gulp/package.json
@@ -8,10 +8,6 @@
     "prod": "gulp server --prod"
   },
   "devDependencies": {
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-preset-es2015": "^6.13.2",
     "del": "^2.2.1",
     "get-gulp-args": "0.0.1",
     "gulp": "^3.9.0",
@@ -35,8 +31,7 @@
     "node-sass": "^3.8.0",
     "proxy-middleware": "^0.15.0",
     "pump": "^1.0.1",
-    "run-sequence": "^1.1.4",
-    "vinyl-paths": "^2.1.0"
+    "run-sequence": "^1.1.4"
   },
   "dependencies": {},
   "license": "MIT"
